<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Les Taxinomes</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="image">image</string>
    <string name="of">de</string>
    <string name="map_filter">Carte</string>
    <string name="map_loadmore">Voir plus de médias</string>
    <string name="my_account">Mon espace</string>
    <string name="login">Login</string>
    <string name="seepassword">Voir le mot de passe en clair</string>
    <string name="logout">Déconnexion</string>
    <string name="password">Mot de passe</string>
    <string name="signin">Me connecter</string>
    <string name="welcome">Bienvenue </string>
    <string name="medialist">Collecte</string>
    <string name="publishMedia">Publier un média</string>
    <string name="takephoto">Prendre une photo</string>
    <string name="publish">Publier</string>
    <string name="publishby">Publié par</string>
    <string name="title">Titre</string>
    <string name="description">Description</string>
    <string name="pleaseWait">Envoi du média en cours, veuillez patienter jusqu\'à votre redirection</string>
    <string name="loadLocation">Charger ma localisation</string>
    <string name="hideloadLocation">Ne pas utiliser cette localisation</string>
    <string name="loadingLocation">Chargement de votre localisation</string>
    <string name="loadingMedia">Chargement des médias</string>
    <string name="tryagain">Veuillez réessayer</string>
    <string name="center_to_current_location">Centrer sur moi</string>

</resources>