<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ConsultationActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/textViewPublicationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/title" />

        <EditText
            android:id="@+id/publicationTitle"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="text"
            android:textStyle="normal"
            android:typeface="sans" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textViewPublicationDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/description" />

        <EditText
            android:id="@+id/publicationDescription"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="text"
            android:textStyle="normal"
            android:typeface="sans" />
        
          <org.osmdroid.views.MapView
        android:id="@+id/publicationMapView"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_margin="20dip"
        android:layout_weight="1"
        android:clickable="false" 
        />
        
        
         <TextView
            android:id="@+id/publicationDocUri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />
         
             <TextView
            android:id="@+id/publicationLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />
             
                 <TextView
            android:id="@+id/publicationLon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />
         
           <TextView
            android:id="@+id/publicationLicenceId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="init"
            />
         
          <Spinner
        android:id="@+id/licenceSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        
          <Button
            android:id="@+id/loadLocationbutton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/loadLocation"
            android:visibility="invisible" />

        <Button
            android:id="@+id/publishbutton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/publish" />
        
        <TextView
            android:id="@+id/publicationPleaseWait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pleaseWait"
            android:visibility="invisible"
            />
    </LinearLayout>

</ScrollView>